SQ 2.1 annotation instructions described

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -284,17 +284,16 @@ Proper blinding in rehabilitation trials can be challenging, but several methods
 %
 
 Follow the Flowcharts~\ref{fig:2_1} and ~\ref{fig:2_1_1} for annotation instructions of the signalling question, ``Were participants aware of their assigned intervention during the trial?''.
-
-Following the above explanation, the first diamond in the flowchart asks the annotators to find a sentences/text descriptions stating that the participants could not distinguish (unaware / blinded) between the intervention and placebo.
-If such description is found then annotate the text description and following the connector line of decision ``Yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – first part where intervention is described, and second part where proper participant blinding is described.
-Both these administration descriptions can be found either in adjacent sentences or far apart.
+Following the above explanation, the first diamond in the flowchart asks the annotators to find text descriptions stating that the participants could not distinguish (unaware / blinded) between the assigned interventions: the main intervention and control intervention.
+If such description is found then annotate it and following the connector line towards decision ``Yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – first part where intervention administration is described, and second part where proper participant blinding via a placebo is described.
 Annotate these parts with the label ``2.1 No Good''.
-Annotators are likely to find this information in the methods section.
-If text parts describing the intervention and placebo administration is not described then, but there are phrases in title saying ``placebo-controlled'', ``single-blind'', ``double-blind'', then mark these phrases with label ``2.1 No Good''.
+Both these administration descriptions can be found either in adjacent sentences or far apart in same or different paragraphs within the same section.
+Annotators are likely to find this information in the methods section and not in the Results section. 
+If text parts describing the intervention and placebo administration is not found, but there are phrases in title or abstract indicating that the study is ``placebo-controlled'', ``single-blind'', ``double-blind'', then mark these phrases with label ``2.1 No Good''.
 
 
-If the annotators did not find any information stating that the participants were unaware of the assigned intervention, they are asked to go to the part II of the placard~\ref{fig:2_1_1}.
-If the annotators find that the study is ``open-label'', or found the sentence mentioning that there was no blinding, or participants were aware, or could not be blinded, or something along the lines of the sentences mentioned below, then annotate such sentences with the label ``2.1 Yes Bad''.
+Going back to the first diamond, if the annotators did not find any information stating that the participants were unaware of the assigned intervention, they are asked to go to the part II of the placard~\ref{fig:2_1_1}.
+If the annotators find that the study is ``open-label'', or found the sentence(s) mentioning that there was no blinding, or participants were aware, or could not be blinded, or something along the lines of the sentences mentioned below, then annotate such sentences with the label ``2.1 Yes Bad''.
 This information could be found either in Methods section or the abstract.
 \begin{enumerate}
     \item Due to the nature of the intervention, it was not possible to blind the participants to their assigned group.
@@ -306,7 +305,7 @@ This information could be found either in Methods section or the abstract.
 %
 %
 %
-If the information about study being ``open-label'' or participants being aware is not found, but the annotator thinks that the intervention-comparator (IC) pair is incompatible or it is not possible to achieve blinding using the I/C pairs then annotate the phrases/words that gives information about I/C (names of intervention and comparator) with the label ``2.1 Probably Yes Bad''.
+If the information about study being ``open-label'' or participants being aware is not found, but the annotator thinks that for the intervention-comparator (IC) pair it is not possible to achieve blinding using the IC pairs then annotate the phrases/words that gives information about IC (names of intervention and comparator) with the label ``2.1 Probably Yes Bad''.
 For example, blinding may not be possible in studies where the intervention and control intervention pairs involve a clear difference in the type or frequency of therapy being delivered, such as surgical interventions, exercise interventions, behavioral interventions, educational interventions, and mind-body interventions.
 %
 %
