All figures added for domain 2

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -313,11 +313,13 @@ For example, blinding may not be possible in studies where the intervention and 
 \subsection*{Signalling question - 2.2}
 \label{subsec:2_2}
 %
+While the previous signalling question assessed participant blinding, the question 2.2, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?'' assess whether the carers and individuals delivering the interventions were aware of the participants' assigned interventions during the trial.
+Blinding or masking of carers and intervention providers is important to minimize the risk of bias that can arise if they have knowledge of the participants' assigned interventions. If carers and intervention providers are not blinded, their awareness of the assigned interventions may influence their behavior, interactions with participants, and delivery of the interventions. This can potentially introduce bias and affect the study outcomes.
 
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/2_2.png}
+    \includegraphics[width=\textwidth]{figures/2_2.pdf}
     \caption{Annotation instructions for the RoB 2.2 signalling question.}
     \label{fig:2_2}
 \end{figure}
@@ -334,7 +336,7 @@ Follow the Flowchart~\ref{fig:2_3} for annotation instructions of the signalling
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/2_3.jpg}
+    \includegraphics[width=\textwidth]{figures/2_3.pdf}
     \caption{Annotation instructions for the RoB 2.3 signalling question.}
     \label{fig:2_3}
 \end{figure}
@@ -362,7 +364,7 @@ For annotation instructions for this signalling question, ``Were these deviation
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/2_4.png}
+    \includegraphics[width=\textwidth]{figures/2_4.pdf}
     \caption{Annotation instructions for the RoB 2.4 signalling question.}
     \label{fig:2_4}
 \end{figure}
@@ -389,7 +391,7 @@ For annotation instructions for this signalling question, ``Were these deviation
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/2_5.jpg}
+    \includegraphics[width=\textwidth]{figures/2_5.pdf}
     \caption{Annotation instructions for the RoB 2.5 signalling question.}
     \label{fig:2_5}
 \end{figure}
@@ -415,7 +417,7 @@ For annotation instructions for this signalling question, ``Was there potential 
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/2_7.jpg}
+    \includegraphics[width=\textwidth]{figures/2_7.pdf}
     \caption{Annotation instructions for the RoB 2.7 signalling question.}
     \label{fig:2_7}
 \end{figure}
