SQ 3 figures added

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -451,13 +451,25 @@ However, what does the phrase "all the available data" mean? Maybe only 70\% of 
 %
 %
 %
+\subsection*{Signalling question - 3.1 }
+%
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_1.pdf}
+    \caption{Annotation instructions for the RoB 3.1 signalling question.}
+    \label{fig:3_1}
+\end{figure}
+
+%
+%
+%
 \subsection*{Signalling question - 3.2 }
 %
 For annotation instructions for this signalling question, ``Is there evidence that the result was not biased by missing outcome data?'' follow the Flowchart~\ref{fig:3_2}.
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/3_2.png}
+    \includegraphics[width=\textwidth]{figures/3_2.pdf}
     \caption{Annotation instructions for the RoB 3.2 signalling question.}
     \label{fig:3_2}
 \end{figure}
@@ -486,7 +498,7 @@ For annotation instructions for this signalling question, ``RoB 3.3 Could missin
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/3_3.png}
+    \includegraphics[width=\textwidth]{figures/3_3.pdf}
     \caption{Annotation instructions for the RoB 3.3 signalling question.}
     \label{fig:3_3}
 \end{figure}
@@ -506,6 +518,51 @@ If this is an outcome that leads to missingness, then label the marked text as `
 Otherwise, if no such sentences with missingness context were identified, then mark the sentence describing the outcomes assessed in the Methods section and mark the sentence.
 If this is an outcome that leads to missingness, then label the marked text as ``3.3 Yes Bad''.
 This is a theoretical question, the answer to which could be basically obtained just by knowing what outcomes are being assessed in the RCT.
+%
+%
+%
+\subsection*{Signalling question - 3.4 }
+%
+XOX
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_4_1.pdf}
+    \caption{Annotation instructions for the RoB 3.4 signalling question.}
+    \label{fig:3_4_1}
+\end{figure}
+
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_4_2.pdf}
+    \caption{Annotation instructions for the RoB 3.4 signalling question.}
+    \label{fig:3_4_2}
+\end{figure}
+
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_4_3.pdf}
+    \caption{Annotation instructions for the RoB 3.4 signalling question.}
+    \label{fig:3_4_3}
+\end{figure}
+
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_4_4.pdf}
+    \caption{Annotation instructions for the RoB 3.4 signalling question.}
+    \label{fig:3_4_4}
+\end{figure}
+
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/3_4_5.pdf}
+    \caption{Annotation instructions for the RoB 3.4 signalling question.}
+    \label{fig:3_4_5}
+\end{figure}
 %
 %
 %
