SQ 4 all figures added

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -568,31 +568,58 @@ XOX
 %
 \subsection*{Signalling question - 4.1 }
 %
-
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/4_1.pdf}
+    \caption{Annotation instructions for the RoB 4.1 signalling question.}
+    \label{fig:4_1}
+\end{figure}
 %
 %
 %
 \subsection*{Signalling question - 4.2 }
 %
 Could measurement or ascertainment of the outcome have differed between intervention groups?
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/4_2.pdf}
+    \caption{Annotation instructions for the RoB 4.2 signalling question.}
+    \label{fig:4_2}
+\end{figure}
 %
 %
 %
 \subsection*{Signalling question - 4.3 }
 %
-
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/4_3.pdf}
+    \caption{Annotation instructions for the RoB 4.3 signalling question.}
+    \label{fig:4_3}
+\end{figure}
 %
 %
 %
 \subsection*{Signalling question - 4.4 }
 %
-
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/4_4.pdf}
+    \caption{Annotation instructions for the RoB 4.4 signalling question.}
+    \label{fig:4_4}
+\end{figure}
 %
 %
 %
 \subsection*{Signalling question - 4.5 }
 %
-
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{figures/4_5.pdf}
+    \caption{Annotation instructions for the RoB 4.5 signalling question.}
+    \label{fig:4_5}
+\end{figure}
 %
 %
 %
