SQ 5 figures added

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -623,6 +623,39 @@ Could measurement or ascertainment of the outcome have differed between interven
 %
 %
 %
+\subsection*{Signalling question - 5.1 }
+%
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{figures/5_1.pdf}
+    \caption{Annotation instructions for the RoB 5.1 signalling question.}
+    \label{fig:5_1}
+\end{figure}
+%
+%
+%
+\subsection*{Signalling question - 5.2 }
+%
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{figures/5_2.pdf}
+    \caption{Annotation instructions for the RoB 5.2 signalling question.}
+    \label{fig:5_2}
+\end{figure}
+%
+%
+%
+\subsection*{Signalling question - 5.3 }
+%
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{figures/5_3.pdf}
+    \caption{Annotation instructions for the RoB 5.3 signalling question.}
+    \label{fig:5_3}
+\end{figure}
+%
+%
+%
 %%===========================================================================================%%
 %% If you are submitting to one of the Nature Portfolio journals using the eJP submission   %%
 %% system, please include the references within the manuscript file itself. You may do this  %%
