SQ 2.2 instructions complete

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -107,7 +107,7 @@ The flowcharts consist of several components, including:
     \item Diamond: Each flowchart contains diamond-shaped symbols that prompt annotators to search for specific information and ask decision-based questions. If the required information is found, instructions are provided on how to annotate it or guidance is given to proceed to the next diamond.
     \item Parallelogram: The output answer to the decision-based question is represented by a parallelogram-shaped symbol. Annotators are instructed to assign a label associated with this symbol if the requested information is found.
     \item Arrows: Color-coded arrows unilaterally flank the diamonds. These arrows provide instructions to annotators to first search for the required information in the full-text section suggested by the green arrow (e.g., Results or Methods section). If the information is not found in the green-coded arrow, they are instructed to check for it in the section suggested by the yellow-coded arrow (e.g., a table or a flowchart). The sections suggested in red arrows with a cross mark denote the information requested by the diamond should not be found in these sections.
-    \item Thought bubble: Bubble-shaped text boxes, referred to as thought bubbles, contain comments that provide additional information, explanations, or instructions about specific steps or elements in the flowchart. These annotations are primarily coloured green but may also be red.
+    \item Thought bubble: Bubble-shaped text boxes, referred to as thought bubbles, contain comments that provide additional information, explanations, or instructions about specific steps or elements in the flowchart. These boxes are primarily coloured green but may also be red.
 \end{enumerate}
 %
 %
@@ -284,37 +284,39 @@ Proper blinding in rehabilitation trials can be challenging, but several methods
 %
 
 Follow the Flowcharts~\ref{fig:2_1} and ~\ref{fig:2_1_1} for annotation instructions of the signalling question, ``Were participants aware of their assigned intervention during the trial?''.
-Following the above explanation, the first diamond in the flowchart asks the annotators to find text descriptions stating that the participants could not distinguish (unaware / blinded) between the assigned interventions: the main intervention and control intervention.
-If such description is found then annotate it and following the connector line towards decision ``Yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – first part where intervention administration is described, and second part where proper participant blinding via a placebo is described.
+Following the above explanation, the first diamond in the flowchart asks the annotators to find text descriptions stating that the participants could not distinguish (unaware/blinded) between the assigned interventions: the main intervention and the control intervention.
+If such description is found, then annotate it and follow the connector line towards the decision ``Yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – the first part where intervention administration is described, and the second part where proper participant blinding via a placebo is described.
 Annotate these parts with the label ``2.1 No Good''.
-Both these administration descriptions can be found either in adjacent sentences or far apart in same or different paragraphs within the same section.
-Annotators are likely to find this information in the methods section and not in the Results section. 
-If text parts describing the intervention and placebo administration is not found, but there are phrases in title or abstract indicating that the study is ``placebo-controlled'', ``single-blind'', ``double-blind'', then mark these phrases with label ``2.1 No Good''.
+Both these administration descriptions can be found either in adjacent sentences or far apart in the same or different paragraphs within the same section.
+Annotators are likely to find this information in the Methods section and not in the Results section. 
+If text parts describing the intervention and placebo administration are not found, but there are phrases in the title or abstract indicating that the study is ``placebo-controlled'', ``single-blind'', ``double-blind'', then mark these phrases with the label ``2.1 No Good''.
 
 
-Going back to the first diamond, if the annotators did not find any information stating that the participants were unaware of the assigned intervention, they are asked to go to the part II of the placard~\ref{fig:2_1_1}.
-If the annotators find that the study is ``open-label'', or found the sentence(s) mentioning that there was no blinding, or participants were aware, or could not be blinded, or something along the lines of the sentences mentioned below, then annotate such sentences with the label ``2.1 Yes Bad''.
-This information could be found either in Methods section or the abstract.
+Going back to the first diamond, if the annotators did not find any information stating that the participants were unaware of the assigned intervention, they are asked to go to part II of the placard~\ref{fig:2_1_1}.
+If the annotators find that the study is ``open-label'', or found the sentence(s) mentioning that there was no blinding, or participants were aware, or could not be blinded, or something along the lines of the sentences mentioned below, then annotate such sentences with the label ``2.1 ProbablyYes Bad''.
+This information can be found either in the Methods section or the abstract.
 \begin{enumerate}
     \item Due to the nature of the intervention, it was not possible to blind the participants to their assigned group.
     \item The physical nature of the intervention made it impossible to blind the participants to their assigned group.
     \item Participants were not blinded to their assigned group as the intervention required direct physical contact and feedback from the therapist.
     \item Blinding of participants was not possible as the intervention involved active participation from the participants and required visual and physical feedback.
-    \item The participants were aware of their assigned group as the nature of the intervention made it difficult to conceal the type of therapy being delivered.
+    \item The participants were aware of their assigned group, as the nature of the intervention made it difficult to conceal the type of therapy being delivered.
 \end{enumerate}
 %
 %
 %
-If the information about study being ``open-label'' or participants being aware is not found, but the annotator thinks that for the intervention-comparator (IC) pair it is not possible to achieve blinding using the IC pairs then annotate the phrases/words that gives information about IC (names of intervention and comparator) with the label ``2.1 Probably Yes Bad''.
-For example, blinding may not be possible in studies where the intervention and control intervention pairs involve a clear difference in the type or frequency of therapy being delivered, such as surgical interventions, exercise interventions, behavioral interventions, educational interventions, and mind-body interventions.
+If the information about the study being ``open-label'' or participants being aware is not found, but the annotator thinks that for the intervention-comparator (IC) pair, it is not possible to achieve blinding using the IC pairs then annotate the phrases/words that give information about IC (names of intervention and comparator) with the label ``2.1 Probably Yes Bad''.
+For example, blinding may not be possible in studies where the intervention and control intervention pairs involve a clear difference in the type or frequency of therapy being delivered, such as surgical interventions, exercise interventions, behavioural interventions, educational interventions, and mind-body interventions.
 %
 %
 %
 \subsection*{Signalling question - 2.2}
 \label{subsec:2_2}
 %
-While the previous signalling question assessed participant blinding, the question 2.2, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?'' assess whether the carers and individuals delivering the interventions were aware of the participants' assigned interventions during the trial.
-Blinding or masking of carers and intervention providers is important to minimize the risk of bias that can arise if they have knowledge of the participants' assigned interventions. If carers and intervention providers are not blinded, their awareness of the assigned interventions may influence their behavior, interactions with participants, and delivery of the interventions. This can potentially introduce bias and affect the study outcomes.
+While the previous signalling question assessed participant blinding, this question, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?'' assesses whether the carers and individuals delivering the interventions were aware of the participants' assigned interventions during the trial.
+Blinding or masking of carers and intervention providers is important to minimize the risk of bias that can arise if they have knowledge of the participants' assigned interventions.
+If carers and intervention providers are not blinded, their awareness of the assigned interventions may influence their behaviour, interactions with participants, and delivery of the interventions.
+This can potentially introduce bias and affect the study outcomes.
 
 %
 \begin{figure}[hbt]
@@ -324,8 +326,12 @@ Blinding or masking of carers and intervention providers is important to minimiz
     \label{fig:2_2}
 \end{figure}
 %
-
-
+Follow the Flowcharts~\ref{fig:2_2} for annotation instructions of the signalling question, ``Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?''.
+Following the above explanation, the first diamond instructs the annotators to find any sentences stating or clearly implying if the carers and administrators could not distinguish between intervention and placebo.
+If no such sentences were found, the label ``2.2 No Information'' will be assumed for this question.
+If such sentences are found, then annotate them and follow the connector line towards the decision ``Yes'', find the sentences that describe intervention and placebo administration and annotate both the descriptions – the first part where intervention administration is described, and the second part where proper participant blinding via a placebo is described.
+Annotate all these parts with the label ``2.1 No Good''.
+If no proper carer blinding was described, then the sentences identified from the first diamond were marked with the label ``2.2 Yes Bad''.
 %
 %
 %
